<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">


    <Button
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vermelho"
        android:background="@color/red500"/>

    <Button
        android:id="@+id/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/laranja"
        android:background="@color/orange500"
        android:layout_below="@+id/red"
        android:layout_toEndOf="@+id/red"/>

    <Button
        android:id="@+id/yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amarelo"
        android:background="@color/yellow500"
        android:layout_below="@+id/orange"
        android:layout_toEndOf="@+id/orange"/>

    <Button
        android:id="@+id/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verde"
        android:background="@color/green500"
        android:layout_below="@+id/yellow"
        android:layout_toEndOf="@+id/yellow"/>

    <Button
        android:id="@+id/azul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/azul"
        android:background="@color/blue500"
        android:layout_below="@+id/green"
        android:layout_toStartOf="@+id/green"/>

    <Button
        android:id="@+id/indigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indigo"
        android:background="@color/indigo500"
        android:layout_below="@+id/azul"
        android:layout_toStartOf="@+id/azul"
        />

    <Button
        android:id="@+id/rosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rosa"
        android:background="@color/pink500"
        android:layout_below="@+id/indigo"
        android:layout_toStartOf="@+id/indigo"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ativar_o_windows"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>